@@ -16,20 +16,15 @@
 # specific language governing permissions and limitations
 # under the License.
 #
+-server
 -XX:InitialRAMPercentage=30
 -XX:MaxRAMPercentage=60
+-XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
+-XX:MaxGCPauseMillis=500
+
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
--XX:+ExitOnOutOfMemoryError
--XX:-OmitStackTraceInFastThrow
--XX:ReservedCodeCacheSize=256M
--XX:PerMethodRecompilationCutoff=10000
--XX:PerBytecodeRecompilationCutoff=10000
--Djdk.attach.allowAttachSelf=true
--Djdk.nio.maxCachedBufferSize=2000000
-# Reduce starvation of threads by GClocker, recommend to set about the number of cpu cores (JDK-8192647)
--XX:+UnlockDiagnosticVMOptions
--XX:GCLockerRetryAllocationCount=32
+
 -DHADOOP_USER_NAME=hive
 -Dlog4j.configurationFile=/etc/trino/log4j2.properties
